[gd_scene load_steps=15 format=2]

[ext_resource path="res://Objects/Scripts/Controllers/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://default_env.tres" type="Environment" id=2]
[ext_resource path="res://Objects/HoverBike.tscn" type="PackedScene" id=3]
[ext_resource path="res://Textures/proto_grid.png" type="Texture" id=4]
[ext_resource path="res://Objects/Scripts/PhysicsModifier.gd" type="Script" id=5]
[ext_resource path="res://Materials/proto_material.tres" type="Material" id=6]
[ext_resource path="res://UI Controls/JoystickPanel/JoystickPanel.tscn" type="PackedScene" id=7]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.945098, 0.541176, 0.541176, 1 )
albedo_texture = ExtResource( 4 )
uv1_triplanar = true

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
size = Vector3( 10, 1, 5 )
subdivide_width = 10
subdivide_height = 1
subdivide_depth = 5

[sub_resource type="BoxShape" id=3]
extents = Vector3( 5, 0.5, 2.5 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 2.47, 1, 1.86 )

[sub_resource type="SphereShape" id=5]
radius = 9.0

[sub_resource type="SphereShape" id=6]
radius = 0.5

[sub_resource type="SphereMesh" id=7]
radius = 0.5
height = 1.0

[node name="Spatial" type="Spatial"]

[node name="PlayerController" type="Node" parent="."]
script = ExtResource( 1 )
hover_bike_path = NodePath("../HoverBike")
controls_path = NodePath("../JoystickPanel")

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="."]
transform = Transform( -0.711056, 0.217387, -0.668687, 0.236405, 0.969557, 0.0638141, 0.662202, -0.112706, -0.740801, -1.70672, 1.69806, 2.41495 )
environment = ExtResource( 2 )
current = true
target = NodePath("../HoverBike/CameraTarget")
speed = 20.0
enabled = true

[node name="HoverBike" parent="." instance=ExtResource( 3 )]
editor/display_folded = true
transform = Transform( -0.611526, 0, -0.791224, 0, 1, 0, 0.791224, 0, -0.611526, 0.747314, 2.8922, 2.85303 )
turning_speed = 3.14
thrust = 9.0
top_speed = 20.0
inertial_damping = 7.0
local_gravity = -9.8
float_height = 0.75
bob_amount = 0.125
bob_thresh = 1.0

[node name="CameraTarget" type="Spatial" parent="HoverBike"]
transform = Transform( -1, 2.98023e-008, -1.78814e-007, 0, 0.984312, 0.176434, 1.78814e-007, 0.176434, -0.984313, -2.38419e-007, 0.854454, -2.77511 )

[node name="DebugTarget" type="Spatial" parent="HoverBike"]
transform = Transform( -0.0630545, 0, -0.99801, 0, 1, 0, 0.99801, 0, -0.0630545, -2.54316, 0, 2.38419e-007 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
editor/display_folded = true
transform = Transform( 0.939158, 0.343485, 0, -0.343485, 0.939158, 0, 0, 0, 1, 5.02255, 0.820377, -11.4987 )
mesh = SubResource( 2 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="MeshInstance2"]
editor/display_folded = true

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance2/StaticBody"]
shape = SubResource( 3 )

[node name="PhysicsModifier" type="Area" parent="MeshInstance2"]
transform = Transform( -4.37114e-008, 0, -1, 0, 1, 0, 1, 0, -4.37114e-008, -1.29206, 1.36879, 0 )
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance2/PhysicsModifier"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.38419e-007, 1.36131 )
shape = SubResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.912382, 2.98023e-008, 0.40934, -0.403806, 0.163882, 0.900046, -0.0670835, -0.98648, 0.149523, 0, 0, 0 )
shadow_enabled = true
shadow_color = Color( 0.0196078, 0.0509804, 0.290196, 1 )

[node name="CurvedRamp" type="CSGCombiner" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.005, 4.01, 9.039 )
use_collision = true

[node name="CSGBox" type="CSGBox" parent="CurvedRamp"]
width = 10.0
height = 10.0
depth = 10.0
material = ExtResource( 6 )

[node name="CSGCylinder" type="CSGCylinder" parent="CurvedRamp"]
transform = Transform( -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 0, 0, 1, 0, 0, -1 )
operation = 2
radius = 4.0
height = 12.0
sides = 32
material = ExtResource( 6 )

[node name="CSGBox2" type="CSGBox" parent="CurvedRamp"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -1.5 )
operation = 2
width = 12.0
height = 6.0
depth = 9.0
material = ExtResource( 6 )

[node name="CSGBox3" type="CSGBox" parent="CurvedRamp"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, -4 )
operation = 2
width = 12.0
height = 6.0
depth = 6.0
material = ExtResource( 6 )

[node name="Walls" type="CSGCombiner" parent="."]
editor/display_folded = true
use_collision = true

[node name="CSGBox" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0 )
width = 52.0
height = 10.0
depth = 52.0
material = ExtResource( 6 )

[node name="CSGBox2" type="CSGBox" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
operation = 2
width = 50.0
height = 10.0
depth = 50.0
material = ExtResource( 6 )

[node name="BowlArena" type="CSGCombiner" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -5 )
use_collision = true

[node name="CSGBox3" type="CSGBox" parent="BowlArena"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 4, 20 )
width = 20.0
height = 31.623
depth = 20.0
material = ExtResource( 6 )

[node name="CSGSphere" type="CSGSphere" parent="BowlArena"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20.5, 8.5, 20.5 )
operation = 2
radius = 9.0
radial_segments = 32
rings = 32
material = ExtResource( 6 )

[node name="CSGBox" type="CSGBox" parent="BowlArena"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20.5, 2, 13 )
operation = 2
width = 3.0
height = 4.5
depth = 10.0
material = ExtResource( 6 )

[node name="Area" type="Area" parent="BowlArena"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20.5, 8.5, 20.5 )
script = ExtResource( 5 )
gravity_to_surface = true

[node name="CollisionShape" type="CollisionShape" parent="BowlArena/Area"]
shape = SubResource( 5 )

[node name="KinematicBody" type="KinematicBody" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.33714, 1.33908, -1.46474 )

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody"]
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="KinematicBody"]
mesh = SubResource( 7 )
material/0 = null

[node name="JoystickPanel" parent="." instance=ExtResource( 7 )]
[connection signal="body_entered" from="BowlArena/Area" to="BowlArena/Area" method="_on_body_entered"]
[connection signal="body_exited" from="BowlArena/Area" to="BowlArena/Area" method="_on_body_exited"]
